[package]
name = "runtime"
version = "0.1.0"
authors = ["Michael Oates <michael@oates.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static="1.4.0"
hyper = "0.13"
snafu = { version = "0.6.3", features= ["std", "backtrace", "futures-01", "futures"] }
tokio= { version = "0.2.16", features= ["macros", "rt-core"] }
futures = "0.3.4"
futures-util ="0.3.4"
async-trait = "0.1.29"
anyhow = "1.0.28"
serde= { version = "1.0.106", features = ["derive"]}
serde_json ="1.0.51"

[dependencies.rusty_v8]
path="/Users/moates/dev/hacks/rusty_v8"
